Enunciado de 2019/1/MAT1610/14

--- a/2019/1/MAT1610/14/enunciado.tex
+++ b/2019/1/MAT1610/14/enunciado.tex
@@ -124,5 +124,7 @@
 	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
 \item Calcular la integral
 	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
+\item Calcule
+$$\displaystyle\int \sqrt[]{1+x^2}dx$$
 \end{preguntas}
 \end{document}
