--- a/2019/1/MAT1610/14/solucion.tex
+++ b/2019/1/MAT1610/14/solucion.tex
@@ -250,5 +250,10 @@ Como vemos que el grado del numerador es mayor que el del denominador, realizamo
 		$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx = \displaystyle\int_0^1 \left(x^2 + 5x + 8 +  \dfrac{2}{x+1}\right)dx$$
 		$$= \left( \dfrac{x^3}{3} + \dfrac{5x^2}{2} + 8x + 2ln(x+1)\right) \ev_0^1 = \dfrac{1}{3} + \dfrac{5}{2} + 8 + 2ln(2) = \dfrac{65}{6} + 2 ln(2)$$
 \end{solucion}
+\item Calcule
+$$\displaystyle\int \sqrt[]{1+x^2}dx$$
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
