Enunciado de 2019/1/MAT1203/14.5

--- a/2019/1/MAT1203/14.5/enunciado.tex
+++ b/2019/1/MAT1203/14.5/enunciado.tex
@@ -115,5 +115,48 @@
 \end{center}
 
 \begin{preguntas}
+\item Diagonalice ortogonalmente
+	$$M = \begin{bmatrix}
+	1 & 0 & 1 \\
+	0 & 2 & 0 \\
+	1 & 0 & 1
+	\end{bmatrix}$$
+\item Sea 
+	$U = Gen\left\{
+	\begin{bmatrix}1\\0\\1\\1\end{bmatrix},
+	\begin{bmatrix}0\\1\\2\\1\end{bmatrix},
+	\begin{bmatrix}1\\1\\3\\2\end{bmatrix}
+	\right\}$.
+\begin{enumerate}[a)]
+\item Encuentre una base ortonormal de $U$.
+\item Encuentre la distancia de $b = 
+		\begin{bmatrix}1\\1\\1\\1\end{bmatrix}$ a $U$.
+\end{enumerate}
+\item Un cierto experimento genera los datos $(1,3)$, $(2,5)$ y $(3,4)$. Describa el modelo que da un ajuste de mínimos cuadrados de esos puntos mediante una recta de la forma $y = \beta_0 +  \beta_1x$
+\item Sea $A$ la matriz simétrica que representa a la forma cuadrática
+	$$Q(x) = 9x_1^2 + 7x_2^2 + 11x_3^2 - 8x_1x_2 + 8x_1x_3$$
+\begin{enumerate}[a)]
+\item Encuentre una matriz ortogonal $P$ tal que el cambio de variable $x = Py$ transforma la forma $x^TAx$ en una forma cuadrática sin productos cruzados.
+\item Escriba la forma cuadrática en las nuevas variables y clasifíquela.
+\end{enumerate}
+\item Sea $A = \begin{bmatrix}
+	1 & 2 & 3\\
+	2 & 8 & 4 \\
+	3 & 4 & 11\end{bmatrix}$. Calcule la factorización $A=LDL^T$ de la matriz $A$ y en base a esto encuentre una matriz $R$ tal que $A = RR^T$.
+\item Sea $A = \begin{bmatrix}1 & -3 \\ -3 & 9\end{bmatrix}$
+\begin{enumerate}[a)]
+\item Encuentre una matriz $L$ cuadrada, triangular inferior con numeros 1 en la diagonal, y una matriz diagonal $D$ tal que $A = LDL^T$.
+\item Encuentre la segunda descomposición de Cholesky de $A$
+\item Realice un cambio de variable $x=Py$ que transforme la forma cuadrática
+		$$Q\left(\begin{bmatrix}x_1\\x_2\end{bmatrix}\right) = \begin{bmatrix}x_1& x_2\end{bmatrix}A\begin{bmatrix}x_1\\ x_2\end{bmatrix}$$
+		en una sin términos con producto cruzado.
+\end{enumerate}
+\item Calcule la descomposición en valores singulares de la matriz $A = \begin{bmatrix}4 & 11 & 14\\ 8 & 7 & -2\end{bmatrix}$
+\item Sea la matriz
+	$A = \begin{bmatrix}
+	1 & 0 \\1 & 1 \\
+	-1 & 1
+	\end{bmatrix}$
+	, determine su descomposición en valores singulares.
 \end{preguntas}
 \end{document}
