--- a/2019/1/MAT1610/13/solucion.tex
+++ b/2019/1/MAT1610/13/solucion.tex
@@ -20,6 +20,8 @@
 \usepackage{stackrel}
 \usepackage{tkz-tab}
 \usepackage{xpatch}
+\usepackage{tkz-euclide}
+\usetkzobj{all}
 \xpatchcmd{\tkzTabLine}{$0$}{$\bullet$}{}{}
 
 \setlength{\headheight}{10pt}
@@ -192,11 +194,11 @@ Graficando:
 		El círculo grande tendrá radio $r_1 = x$, mientras que el círculo pequeño tendrá área $r_2 = x^2$. 
 		
 		Luego, el área de cada sección será
-		$$A = \pi r_1^2 + \pi r_2^2 = \pi(x^2+x^4) $$
+		$$A = \pi r_1^2 - \pi r_2^2 = \pi(x^2-x^4) $$
 		Asi,
-		$$dV = \pi(x^2+x^4)dx$$
+		$$dV = \pi(x^2-x^4)dx$$
 		Finalmente, el volumen del sólido es
-		$$V = \int_0^1 \pi(x^2+x^4)dx = \pi\left(\dfrac{x^3}{3} + \dfrac{x^5}{5}\right)\ev_0^1 = \pi \left(\dfrac{1}{3}+\dfrac{1}{5}\right) = \dfrac{8\pi}{15}$$
+		$$V = \int_0^1 \pi(x^2-x^4)dx = \pi\left(\dfrac{x^3}{3} - \dfrac{x^5}{5}\right)\ev_0^1 = \pi \left(\dfrac{1}{3}-\dfrac{1}{5}\right) = \dfrac{2\pi}{15}$$
 \end{solucion}
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
