Enunciado de 2019/1/MAT1610/14.5

--- a/2019/1/MAT1610/14.5/enunciado.tex
+++ b/2019/1/MAT1610/14.5/enunciado.tex
@@ -122,5 +122,34 @@
 	$$y=x^2 \quad e \quad y = 3-2x^2$$
 	y sus secciones perpendiculares al eje $y$ son triángulos equiláteros. Hallar el volúmen del sólido.
 \item Determinar el volumen del sólido generado al rotar las curvas $y=x$ e $y= x^2$ en torno al eje $x$, para $x \in [0,1]$
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int xcos(x)dx$
+\task $\displaystyle\int arctan(x)dx$
+\task $\displaystyle\int ln(x)dx$
+\task $\displaystyle\int ln^2(x)dx$
+\end{tasks}
+\item Calcular
+	$$\displaystyle\int x^2\ arctan(x)dx$$
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int cos^2(x)dx$
+\task $\displaystyle\int cos^3(x)sen^2(x)dx$
+\task $\displaystyle\int sec^4(x)tan^2(x)dx$
+\task $\displaystyle\int sec^3(x)tan^3(x)dx$
+\end{tasks}
+\item Calcule la siguiente integral
+	$$\displaystyle\int sen^3(x)cos^4(x)dx$$
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{(4-x^2)^3}}$
+\task $\displaystyle\int \dfrac{xdx}{\sqrt[]{1+x^2}}$
+\task $\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}}$
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}}$
+\end{tasks}
+\item Resuelva la siguiente integral
+	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
+\item Calcular la integral
+	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
 \end{preguntas}
 \end{document}
