--- a/2019/1/MAT1610/14.5/solucion.tex
+++ b/2019/1/MAT1610/14.5/solucion.tex
@@ -276,5 +276,329 @@ Graficando:
 		Finalmente, el volumen del sólido es
 		$$V = \int_0^1 \pi(x^2-x^4)dx = \pi\left(\dfrac{x^3}{3} - \dfrac{x^5}{5}\right)\ev_0^1 = \pi \left(\dfrac{1}{3}-\dfrac{1}{5}\right) = \dfrac{2\pi}{15}$$
 \end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int xcos(x)dx$
+\task $\displaystyle\int arctan(x)dx$
+\task $\displaystyle\int ln(x)dx$
+\task $\displaystyle\int ln^2(x)dx$
+\end{tasks}
+\begin{solucion}
+Recordemos primero que
+		$$\displaystyle\int Udv = UV - \displaystyle\int Vdu$$
+		Además, para todos estos ejercicios debemos recordar lo siguiente: ILATE,
+		donde\\\\
+		I: Inversa trigonométrica\\
+		L: Logarítmica\\
+		A: Algebraica\\
+		T: Trigonométrica\\
+		E: Exponencial\\\\
+		La función que esté primero en la lista, la usaremos como $U$. La que este despues, será $dv$.
+\begin{enumerate}[a)]
+\item $\displaystyle\int xcos(x)dx$\\\\
+			Aquí podemos ver dos funciones: $x$ que es algebraica y $cos(x)$ que es trigonométrica. Como $x^2$ esta primero en la lista, entonces
+			$$U = x, \quad dv = cos(x)dx$$
+			Para obtener $V$ y $du$, derivamos e integramos según corresponda
+			$$du = dx, \quad V = sen(x)$$
+			Luego, aplicando la regla de la vaca, tenemos que
+			$$\displaystyle\int xcos(x)dx = xsen(x) - \displaystyle\int sen(x)dx = xsen(x) +cos(x) + c $$
+\item $\displaystyle\int arctan(x)dx$\\\\
+			Es evidente que en este caso debemos tomar
+			$$U = arctan(x), \quad dv = dx \ra du = \dfrac{dx}{1+x^2}, \quad V = x$$
+			Luego,
+			$$\displaystyle\int arctan(x)dx 
+			= x\ arctan(x) - \displaystyle\int \dfrac{xdx}{1+x^2} $$
+			Utilizamos $w = 1+x^2 \ra dw = 2xdx$, 
+			$$= x\ arctan(x) - \dfrac{1}{2}\displaystyle\int \dfrac{dw}{w} + c
+			= x\ arctan(x) - \dfrac{1}{2}ln(w)$$
+			$$= \ arctan(x) - \dfrac{1}{2}ln(1+x^2) + c$$
+\item $\displaystyle\int ln(x)dx$\\\\
+			En este caso,
+			$$U = ln(x), \quad dv = dx \ra du = \dfrac{dx}{x}, \quad V = x$$
+			Luego, 
+			$$\displaystyle\int ln(x)dx
+			= xln(x) - \displaystyle\int \dfrac{xdx}{x}
+			= xln(x) - \displaystyle\int dx
+			= xln(x) - x + c
+			$$
+\item $\displaystyle\int ln^2(x)dx$\\\\
+			De la misma forma que antes
+			$$U = ln^2(x), \quad dv = dx \ra du = 2ln(x)\dfrac{1}{x}dx, \quad V = x$$
+			Con esto,
+			$$\displaystyle\int ln^2(x)dx = xln^2(x) - 2\displaystyle\int ln(x)dx$$
+			Por el ejercicio anterior sabemos que
+			$$\displaystyle\int ln(x)dx = xln(x) -x$$
+			Luego,
+			$$=xln^2(x) - 2(xln(x) - x) + c$$
+			Finalmente,
+			$$\displaystyle\int ln^2(x)dx = xln^2(x) - 2xln(x) + x + c$$
+\end{enumerate}
+\end{solucion}
+\item Calcular
+	$$\displaystyle\int x^2\ arctan(x)dx$$
+\begin{solucion}
+Usamos integración por partes, con
+		$$U = arctan(x) \ra du = \dfrac{dx}{1+x^2}$$
+		$$dv = x^2 \ra V = \dfrac{x^3}{3}dx$$
+		Luego,
+		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{3} \displaystyle\int \dfrac{x^3}{x^2+1}dx$$
+		Para la integral del lado derecho, usamos sustitución con $m = 1+x^2 \ra dm = 2xdx$, con lo que
+		$$\displaystyle\int \dfrac{x^3}{x^2+1}dx
+		= \dfrac{1}{2}\displaystyle\int \dfrac{m-1}{m}dm
+		= \dfrac{1}{2}\displaystyle\int \left(1-\dfrac{1}{m}\right)dm = \dfrac{1}{2}(m-ln|m|)$$
+		Volvemos a la variable original
+		$$= \dfrac{1}{2}(1+x^2-ln(1+x^2))$$
+		Finalmente, reemplazando en el inicio,
+		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{6} (1+x^2-ln(1+x^2))$$
+\end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int cos^2(x)dx$
+\task $\displaystyle\int cos^3(x)sen^2(x)dx$
+\task $\displaystyle\int sec^4(x)tan^2(x)dx$
+\task $\displaystyle\int sec^3(x)tan^3(x)dx$
+\end{tasks}
+\begin{solucion}
+En este tipo de integrales, encontraremos 2 grandes casos, con múltiples casos dentro de ellos.\\
+
+En primer lugar,
+$$\displaystyle\int sen^n(x)cos^m(x)dx$$
+Caso 1: $n$ ó $m$ impar\\
+
+En este caso, se toma el que tenga el exponente impar (si ambos son impares se puede elegir cualquiera) y se separa un factor de él, el cual se pone al final. El resto de los términos se transforman a la otra función, es decir, si separamos el $seno$, todo se transforma a $coseno$ y viceversa. Luego se hace la sustitución con la función trigonométrica que \textbf{no} separamos.
+
+Por ejemplo, si el $m$ fuese impar, esto se vería así:
+$$= \displaystyle\int sen^n(x)(1-sen^2(x))^{\frac{m-1}{2}}cos(x)dx$$
+Luego, $u = sen(x) \ra du = cos(x)dx$, quedando
+$$= \displaystyle\int u^n(1-u^2)^{\frac{m-1}{2}}du$$
+Caso 2: $n$ y $m$ par\\
+
+En este caso, usamos las propiedades
+$$sen^2(x) = \dfrac{1-cos(2x)}{2} \qquad y \qquad cos^2(x) = \dfrac{1+cos(2x)}{2}$$
+Para reducir el grado de los $senos$ y $cosenos$ y separamos en multiples integrales.\\
+
+En segundo lugar,
+$$\displaystyle\int sec^n(x)tan^m(x)dx$$
+Caso 1: $n$ par\\
+
+En este caso, separamos un $sec^2(x)$ de la integral, dejandolo al final y convertimos todas las $secantes$ a $tangentes$. Luego, hacemos la sustitución $u = tan(x) \ra du = sec^2(x)dx$. Esto es,
+$$=\displaystyle\int (1+tan^2(x))^{\frac{n-2}{2}}tan^m(x)sec^2(x)dx$$
+Luego, $u = tan(x) \ra du = sec^2(x)dx$, quedando
+$$=\displaystyle\int (1+u^2)^{\frac{n-2}{2}}u^m du$$
+Caso 2: $m$ impar\\
+
+En este caso, separamos un $sec(x)tan(x)$ de la integral, dejandolo al final y convertimos todas las $tangentes$ a $secantes$. Luego, hacemos la sustitución $u = sec(x) \ra du = sec(x)tan(x)dx$. Esto es,
+$$=\displaystyle\int sec^{n-1}(x)(sec^2(x) - 1)^{\frac{m-1}{2}}sec(x)tan(x)dx$$
+Luego, $u = sec(x) \ra du = sec(x)tan(x)dx$, quedando
+$$=\displaystyle\int u^{n-1}(u^2 - 1)^{\frac{m-1}{2}}du$$
+
+Caso 3: $n$ impar y $m$ par\\
+
+\begin{center}
+\includegraphics[width=8cm]{../../../../img/lie_down}
+\end{center}
+Procedamos ahora con los ejercicios:
+\begin{enumerate}[a)]
+\item $\displaystyle\int cos^2(x)dx$\\\\
+			Recordemos que $cos^2(x) = \dfrac{1+cos(2x)}{2}$
+			Luego,
+			$$\displaystyle\int cos^2(x)dx 
+			= \displaystyle\int \dfrac{1+cos(2x)}{2}dx
+			= \displaystyle\int \dfrac{dx}{2} + \displaystyle\int \dfrac{cos(2x)dx}{2}
+			= \dfrac{x}{2} + \dfrac{sen(2x)}{4} + c
+			$$
+\item $\displaystyle\int cos^3(x)sen^2(x)dx$\\\\
+			Cuando estamos ante senos y cosenos y alguno de los exponentes es impar, debemos separar la función que tiene dicho exponente para dejarlo par y proceder a convertir todo a la otra función, es decir
+			$$\displaystyle\int cos^3(x)sen^2(x)dx
+			= \displaystyle\int cos^2(x)sen^2(x)cos(x)dx$$
+			$$= \displaystyle\int (1-sen^2(x))sen^2(x)cos(x)dx$$
+			Luego, utilizamos el cambio
+			$$u = sen(x) \ra du = cos(x)dx$$
+			De esta forma,
+			$$= \displaystyle\int (1-u^2)u^2du
+			= \displaystyle\int (u^2-u^4)du
+			= \dfrac{u^3}{3} - \dfrac{u^5}{5} + c
+			$$
+			Volviendo a la variable original,
+			$$\displaystyle\int cos^3(x)sen^2(x)dx 
+			= \dfrac{sen^3(x)}{3} - \dfrac{sen^5(x)}{5} + c$$
+			
+\item $\displaystyle\int sec^4(x)tan^2(x)dx$\\\\
+			En el caso de las secantes y tangentes, mientras el exponente de la secante y la tangente no sean impar y pan, respectivamente de manera simultanea, siempre podremos acuidar a pasar todo a tangente o todo a secante, de la siguiente forma
+			$$\displaystyle\int sec^4(x)tan^2(x)dx
+			=\displaystyle\int sec^2(x)tan^2(x)sec^2(x)dx$$
+			$$=\displaystyle\int (1+tan^2(x))tan^2(x)sec^2(x)dx$$
+			Luego,
+			$$u = tan(x) \ra du = sec^2(x)dx$$
+			Con lo que tenemos
+			$$=\displaystyle\int (1+u^2)u^2du
+			= \displaystyle\int (u^2+u^4)du
+			= \dfrac{u^3}{3} + \dfrac{u^5}{5} + c$$
+			Finalmente, volvemos a la variable original, con lo que
+			$$\displaystyle\int sec^4(x)tan^2(x)dx = \dfrac{tan^3(x)}{3} + \dfrac{tan^5(x)}{5} + c$$
+\item $\displaystyle\int sec^3(x)tan^3(x)dx$\\\\
+			Como dije antes, también podemos convertir todo en secantes. Esto se hace de la siguiente forma
+			$$\displaystyle\int sec^3(x)tan^3(x)dx
+			= \displaystyle\int sec^2(x)tan^2(x)sec(x)tan(x)dx$$
+			$$ = \displaystyle\int sec^2(x)(sec^2(x)-1)sec(x)tan(x)dx$$
+			En este caso, hacemos el cambio
+			$$u = sec(x) \ra du = sec(x)tan(x)$$
+			Con lo que obtenemos
+			$$ = \displaystyle\int u^2(u^2-1)du
+			= \displaystyle\int (u^4-u^2)du
+			= \dfrac{u^5}{5} - \dfrac{u^3}{3} + c$$
+			Finalmente, volvemos a la variable original, con lo que
+			$$= \dfrac{sec^5(x)}{5} - \dfrac{sec^3(x)}{3} + c$$	
+\end{enumerate}
+\end{solucion}
+\item Calcule la siguiente integral
+	$$\displaystyle\int sen^3(x)cos^4(x)dx$$
+\begin{solucion}
+Como el exponente del seno es impar, lo separamos y dejamos un seno aislado
+		$$\displaystyle\int sen^2(x)cos^4(x) sen(x)dx$$
+		Luego, pasamos todo a coseno
+		$$\displaystyle\int (1-cos^2(x))cos^4(x) sen(x)dx$$
+		A continuación, utilizamos la sustitución $u = cos(x) \ra du = -sen(x)dx$
+		$$\displaystyle\int (1-u^2)u^4(- du) = -\displaystyle\int (u^4-u^6)du = -(\dfrac{u^5}{5} - \dfrac{u^7}{7}) +c= \dfrac{u^7}{7}-\dfrac{u^5}{5} + c$$
+		Por último, volvemos a la variable original, con lo que
+		$$\displaystyle\int sen^3(x)cos^4(x)dx = \dfrac{cos^7(x)}{7}-\dfrac{cos^5(x)}{5} + c$$
+\end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{(4-x^2)^3}}$
+\task $\displaystyle\int \dfrac{xdx}{\sqrt[]{1+x^2}}$
+\task $\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}}$
+\task $\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int \dfrac{dx}{\sqrt[]{(4-x^2)^3}}$\\\\
+			Como en la integral hay presente una expresión de la forma $a^2-x^2$, realizamos el siguiente cambio de variable
+			$$x = asen(\theta) \ra x = 2sen(\theta) \ra dx = 2cos(\theta)d\theta$$
+			Luego, la integral es
+			$$\displaystyle\int \dfrac{2cos(\theta)d\theta}{\sqrt[]{(4-4sen^2(\theta))^3}}
+			= \displaystyle\int \dfrac{2cos(\theta)d\theta}{\sqrt[]{(4(1-sen^2(\theta)))^3}}
+			= \displaystyle\int \dfrac{2cos(\theta)d\theta}{\sqrt[]{(4cos^2(\theta))^3}}$$
+			$$= \displaystyle\int \dfrac{2cos(\theta)d\theta}{(\sqrt[]{4cos^2(\theta)})^3}
+			= \displaystyle\int \dfrac{2cos(\theta)d\theta}{(2cos(\theta))^3}
+			= \dfrac{1}{4}\displaystyle\int \dfrac{d\theta}{(cos^2(\theta))}
+			= \dfrac{1}{4}\displaystyle\int sec^2(\theta)d\theta$$
+			$$= \dfrac{1}{4} tan(\theta) + c$$
+			Recordemos que $x = 2sen(\theta)$, por lo que
+			$$\theta = arcsen\left(\dfrac{x}{2}\right)$$
+			Esto se puede representar con el siguiente triangulo auxiliar, ya que $\theta$ es el ángulo cuyo seno es $\dfrac{x}{2}$
+			\begin{center}
+				\begin{tikzpicture}[scale=1.25]%,cap=round,>=latex]
+				
+				\coordinate [label=left:$ $] (A) at (-1.5cm,-1.cm);
+				\coordinate [label=right:$ $] (C) at (1.5cm,-1.0cm);				\coordinate [label=above:$ $] (B) at (1.5cm,1.0cm);
+				\draw (A) -- node[above] {$2$} (B) -- node[right] {$x$} (C) -- node[below] {$\sqrt[]{4-x^2}$} (A);
+				
+				\draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
+				
+				\tkzMarkAngle[size=0.8cm,%
+				opacity=.4](C,A,B)
+				\tkzLabelAngle[pos = 0.6](C,A,B){$\theta$}
+				
+				\end{tikzpicture}
+			\end{center}
+			Luego, podemos ver que
+			$$tan(\theta) = \dfrac{x}{\sqrt[]{4-x^2}}$$
+			Finalmente,
+			$$\displaystyle\int \dfrac{dx}{\sqrt[]{(4-x^2)^3}} =
+			\dfrac{x}{4\ \sqrt[]{4-x^2}} + c$$
+\item $\displaystyle\int \dfrac{xdx}{\sqrt[]{1+x^2}}$\\\\
+			Como identificamos una expresión de la forma $a^2+x^2$, usamos la sustitución
+			$$x = tan(\theta) \ra dx = sec^2(\theta)$$
+			Luego tenemos
+			$$\displaystyle\int \dfrac{tan(\theta)sec^2(\theta)d\theta}{\sqrt[]{1+tan^2(\theta)}}
+			= \displaystyle\int \dfrac{tan(\theta)sec^2(\theta)d\theta}{\sqrt[]{sec^2(\theta)}}
+			= \displaystyle\int \dfrac{tan(\theta)sec^2(\theta)d\theta}{sec(\theta)}$$
+			$$= \displaystyle\int sec(\theta)tan(\theta)d\theta = sec(\theta) + c$$
+			Como $x = tan(\theta) \ra \theta = arctan(x)$, nuestro triangulo auxiliar sería
+			\begin{center}
+				\begin{tikzpicture}[scale=1.25]%,cap=round,>=latex]
+				
+				\coordinate [label=left:$ $] (A) at (-1.5cm,-1.cm);
+				\coordinate [label=right:$ $] (C) at (1.5cm,-1.0cm);				\coordinate [label=above:$ $] (B) at (1.5cm,1.0cm);
+				\draw (A) -- node[above] {$\sqrt[]{1+x^2}$} (B) -- node[right] {$x$} (C) -- node[below] {$1$} (A);
+				
+				\draw (1.25cm,-1.0cm) rectangle (1.5cm,-0.75cm);
+				
+				\tkzMarkAngle[size=0.8cm,%
+				opacity=.4](C,A,B)
+				\tkzLabelAngle[pos = 0.6](C,A,B){$\theta$}
+				
+				\end{tikzpicture}
+			\end{center}
+			Finalmente, 
+			$$\displaystyle\int \dfrac{xdx}{\sqrt[]{1+x^2}} = \sqrt[]{1+x^2} + c$$
+\item $\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}}$\\\\
+			Al identificar la expresión de la forma $x^2-a^2$, sabemos que debemos ocupar
+			$$x = sec(\theta) \ra dx = sec(\theta)tan(\theta)$$
+			Luego obtenemos
+			$$\displaystyle\int \dfrac{sec(\theta)tan(\theta)d\theta}{sec(\theta)\ \sqrt[]{sec^2(\theta)-1}}
+			= \displaystyle\int \dfrac{tan(\theta)d\theta}{\sqrt[]{tan^2(\theta)}}
+			= \displaystyle\int d\theta = \theta + c$$
+			Como $x = sec(\theta) \ra \theta = arcsec(x)$
+			Finalmente,
+			$$\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}} = arcsec(x) + c$$
+\item $\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}}$\\\\
+			Como no podemos ver ninguna expresión como las mencionadas anteriormente, vamos a hacer completación de cuadrados
+			$$16+6x-x^2 = 25 - 9 + 6x - x^2 = 25 - (x^2-6x+9) = 25 - (x-3)^2$$
+			Luego, la integral es
+			$$\displaystyle\int \dfrac{dx}{\sqrt[]{25 - (x-3)^2}}$$
+			Aqui si podemos identificar una expresión del tipo $a^2-x^2$, por lo que el cambio que corresponde hacer es
+			$$x-3 = 5sen(\theta) \ra dx = 5cos(\theta)d\theta$$
+			Entonces obtenemos la integral
+			$$\displaystyle\int \dfrac{5cos(\theta)d\theta}{\sqrt[]{25 - 25sen^2(\theta)}}
+			=\displaystyle\int \dfrac{5cos(\theta)d\theta}{\sqrt[]{25(1 - sen^2(\theta))}}
+			=\displaystyle\int \dfrac{5cos(\theta)d\theta}{\sqrt[]{25cos^2(\theta)}}$$
+			$$=\displaystyle\int \dfrac{5cos(\theta)d\theta}{5cos(\theta)} 
+			= \displaystyle\int d\theta = \theta + c$$
+			Como $x-3 = 5sen(\theta) \ra \theta = arcsen\left(\dfrac{x-3}{5}\right)$\\
+			Finalmente,
+			$$\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}} = arcsen\left(\dfrac{x-3}{5}\right) + c$$
+\end{enumerate}
+\end{solucion}
+\item Resuelva la siguiente integral
+	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
+\begin{solucion}
+En primer lugar, utilizamos fracciones parciales para descomponer la integral
+		$$\dfrac{1}{x(2-x)} = \dfrac{A}{x} + \dfrac{B}{2-x}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{A(2-x) + Bx}{x(2-x)}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{2A-Ax + Bx}{x(2-x)}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{2A+ (B-A)x}{x(2-x)}$$
+		De esta forma, tenemos el siguiente sistema de ecuaciones
+		$$2A = 1, \quad B-A = 0 \ra A = \dfrac{1}{2}, \quad B = \dfrac{1}{2}$$
+		Entonces, tenemos que la descomposición es
+		$$\dfrac{1}{x(2-x)} = \dfrac{1}{2x} + \dfrac{1}{2(2-x)}$$
+		Luego, la integral original la podemos escribir como
+		$$\displaystyle\int \dfrac{dx}{x(2-x)} = \displaystyle\int \dfrac{dx}{2x} + \displaystyle\int \dfrac{dx}{2(2-x)}$$
+		$$ = \dfrac{1}{2} \left( \displaystyle\int \dfrac{dx}{x} + \displaystyle\int \dfrac{dx}{2-x} \right)$$
+		$$ = \dfrac{1}{2} (ln|x| - ln|2-x| ) + c$$
+\end{solucion}
+\item Calcular la integral
+	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
+\begin{solucion}
+Como vemos que el grado del numerador es mayor que el del denominador, realizamos división polinómica, es decir, calculamos
+		$$x^3+6x^2+13x+10 : x+1$$
+		Esto lo podemos hacer utilizando división sintética
+		$$
+		\renewcommand\arraystretch{1.5}
+		\setlength\doublerulesep{0pt}
+		\begin{array}{rrrrr}
+		\multicolumn{1}{r|}{1} & 1 & 6 & 13 & 10\\\cline{2-5}
+		& & 1& 5 & 8 \\\cline{2-5}
+		& 1 & 5& 8 & 2 
+		\end{array}
+		$$
+		De donde obtenemos que
+		$$\dfrac{x^3+6x^2+13x+10}{x+1} = x^2 +5x + 8 + \dfrac{2}{x+1}$$
+		Luego,
+		$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx = \displaystyle\int_0^1 \left(x^2 + 5x + 8 +  \dfrac{2}{x+1}\right)dx$$
+		$$= \left( \dfrac{x^3}{3} + \dfrac{5x^2}{2} + 8x + 2ln(x+1)\right) \ev_0^1 = \dfrac{1}{3} + \dfrac{5}{2} + 8 + 2ln(2) = \dfrac{65}{6} + 2 ln(2)$$
+\end{solucion}
 \end{preguntas}
 \end{document}
