Solución de 2019/1/MAT1610/14

--- a/2019/1/MAT1610/14/solucion.tex
+++ b/2019/1/MAT1610/14/solucion.tex
@@ -193,9 +193,9 @@
 			$$\displaystyle\int \dfrac{sec(\theta)tan(\theta)d\theta}{sec(\theta)\ \sqrt[]{sec^2(\theta)-1}}
 			= \displaystyle\int \dfrac{tan(\theta)d\theta}{\sqrt[]{tan^2(\theta)}}
 			= \displaystyle\int d\theta = \theta + c$$
-			Como $x = tan(\theta) \ra \theta = arctan(x)$
+			Como $x = sec(\theta) \ra \theta = arcsec(x)$
 			Finalmente,
-			$$\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}} = arctan(\theta) + c$$
+			$$\displaystyle\int \dfrac{dx}{x\ \sqrt[]{x^2-1}} = arcsec(x) + c$$
 \item $\displaystyle\int \dfrac{dx}{\sqrt[]{16+6x-x^2}}$\\\\
 			Como no podemos ver ninguna expresión como las mencionadas anteriormente, vamos a hacer completación de cuadrados
 			$$16+6x-x^2 = 25 - 9 + 6x - x^2 = 25 - (x^2-6x+9) = 25 - (x-3)^2$$
