Enunciado de 2019/2/MAT1620/1

--- a/2019/2/MAT1620/1/enunciado.tex
+++ b/2019/2/MAT1620/1/enunciado.tex
@@ -115,5 +115,21 @@
 \end{center}
 
 \begin{preguntas}
+\item Determinar si las siguientes integrales impropias convergen o divergen y calcularlas en caso de que converjan.
+\begin{tasks}(3)
+\task $\displaystyle\int_{0}^{3}\dfrac{1}{x\ \sqrt[]{x}}dx$
+\task $\displaystyle\int_{e}^{\infty}\dfrac{1}{xlnx}dx$
+\task $\displaystyle\int_{0}^{\infty}\dfrac{1}{\sqrt[]{x}(1+x)}dx$
+\end{tasks}
+\item La Trompeta de Torricelli se consigue al rotar la curva $y=\dfrac{1}{x},\ x \geq 1$ en torno al eje $x$.
+\begin{enumerate}[a)]
+\item Calcular la superficie de la trompeta entre $1$ y $L$ con la siguiente formula:
+		$$ S = 2\pi \displaystyle\int_{1}^{L} f(x)\ \sqrt[]{1+[f'(x)]^2}dx, \quad con\ L \ra \infty $$
+\item Calcular el volumen de la trompeta entre $1$ y $L$ con la siguiente formula:
+		$$ V = \pi \displaystyle\int_{1}^{L} f(x)^2dx, \quad con\ L \ra \infty$$
+\end{enumerate}
+\item Determinar el valor de la constante $C$ para la cual la integral
+	$$\displaystyle\int_{0}^{\infty} \left( \dfrac{x}{x^2+1} - \dfrac{C}{3x+1}\right)dx$$
+	converge. Evalúe la integral para este valor de $C$.
 \end{preguntas}
 \end{document}
