Enunciado de 2019/2/MAT1620/1

--- a/2019/2/MAT1620/1/enunciado.tex
+++ b/2019/2/MAT1620/1/enunciado.tex
@@ -131,5 +131,7 @@
 \item Determinar el valor de la constante $C$ para la cual la integral
 	$$\displaystyle\int_{0}^{\infty} \left( \dfrac{x}{x^2+1} - \dfrac{C}{3x+1}\right)dx$$
 	converge. Evalúe la integral para este valor de $C$.
+\item Estudiar la convergencia de la siguiente integral
+$$\displaystyle\int_{0}^{\infty} e^{-x} \dfrac{sen^2(x)}{x^{5/2}}dx$$
 \end{preguntas}
 \end{document}
