Solución de 2019/2/MAT1620/1

--- a/2019/2/MAT1620/1/solucion.tex
+++ b/2019/2/MAT1620/1/solucion.tex
@@ -250,8 +250,10 @@ $$\dfrac{e^{-x}\sin^2(x)}{x^{5/2}} \leq \dfrac{1}{x^{5/2}}$$
 Luego,
 $$\displaystyle\int_{1}^{\infty} \dfrac{e^{-x}\sin^2(x)}{x^{5/2}} \leq \displaystyle\int_{1}^{\infty} \dfrac{1}{x^{5/2}}$$
 Donde la integral de la derecha es una integral de tipo 1 con $p > 1$, por lo que converge. Entonces, por criterio de comparación, la integral del lado izquierdo también converge.
-\\
-Finalmente, como ambas integrales convergen, concluimos que $\displaystyle\int_{0}^{\infty} e^{-x} \dfrac{sen^2(x)}{x^{5/2}}dx$ es convergente.
+\\\\
+Finalmente, como ambas integrales convergen, concluimos que 
+$$\displaystyle\int_{0}^{\infty} e^{-x} \dfrac{sen^2(x)}{x^{5/2}}dx$$
+es convergente.
 \end{solucion}
 \end{preguntas}
 \end{document}
