--- a/2019/2/MAT1620/2/solucion.tex
+++ b/2019/2/MAT1620/2/solucion.tex
@@ -115,5 +115,47 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $a_n = \dfrac{n!}{n^n}$, calcular $\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$
+\begin{solucion}
+$$\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n} = \lim\limits_{n \ra \infty} \dfrac{\dfrac{(n+1)!}{(n+1)^{n+1}}}{\dfrac{n!}{n^n}} = \lim\limits_{n \ra \infty} \dfrac{(n+1)!}{n!} \cdot \dfrac{n^n}{(n+1)^{n+1}} =\lim\limits_{n \ra \infty} (n+1) \cdot \dfrac{n^n}{(n+1)^{n+1}}$$
+		$$=\lim\limits_{n \ra \infty} \dfrac{n^n}{(n+1)^{n}} = \lim\limits_{n \ra \infty} \left(\dfrac{n}{n+1}\right)^n = \lim\limits_{n \ra \infty} \dfrac{1}{\left(\dfrac{n+1}{n}\right)^n} = \lim\limits_{n \ra \infty} \dfrac{1}{\left(1+\dfrac{1}{n}\right)^n}$$
+		$$ = \dfrac{1}{e}$$
+\end{solucion}
+\item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
+\begin{tasks}(2)
+\task $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$
+\task $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$\\
+			\\
+			Observando la sucesión, resulta evidente que el numerador es $2^n$ y el\\ denominador $3^n$. Además, vemos que es alternante, por lo que el término general será
+			$$a_n = (-1)^n \dfrac{2^{n}}{3^{n}}$$
+			Luego, el límite de la sucesión es igual al límite del termino general, que sería
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} (-1)^n \dfrac{2^{n}}{3^{n}} = 
+			\lim\limits_{n\ra \infty} (-1)^n \left(\dfrac{2}{3}\right)^n = 0$$
+\item $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{enumerate}
+\end{solucion}
+\item Calcule el límite de las siguientes sucesiónes
+\begin{tasks}(2)
+\task $a_n = \dfrac{3^n+7}{5^n-3}$
+\task $a_n = \dfrac{n^3-n}{7n^3+6}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $a_n = \dfrac{3^n+7}{5^n-3}$\\
+			\\
+			Como antes, vemos el límite del término general
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{3^n+7}{5^n-3} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{ln(3)3^n}{ln(5)5^n} = \lim\limits_{n\ra \infty} \dfrac{ln(3)}{ln(5)} \left(\dfrac{3}{5}\right)^n = 0$$
+\item $a_n = \dfrac{n^3-n}{7n^3+6}$\\
+			\\
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{n^3-n}{7n^3+6} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{3n^2-1}{21n^2}
+			\stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{6n}{42n} = \dfrac{1}{7}$$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
