--- a/2019/2/MAT1620/2/enunciado.tex
+++ b/2019/2/MAT1620/2/enunciado.tex
@@ -115,16 +115,19 @@
 \end{center}
 
 \begin{preguntas}
-\item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
-\begin{tasks}(2)
-\task $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$
-\task $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
-\end{tasks}
 \item Calcule el límite de las siguientes sucesiónes
 \begin{tasks}(2)
 \task $a_n = \dfrac{3^n+7}{5^n-3}$
 \task $a_n = \dfrac{n^3-n}{7n^3+6}$
 \end{tasks}
+\item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
+\begin{tasks}(2)
+\task $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$
+\task $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{tasks}
 \item Sea $a_n = \dfrac{n!}{n^n}$, calcular $\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$
+\item La sucesión $\{a_n\}$ se define con 
+		$$a_1=1\quad y\quad a_{n+1} = 3-\dfrac{1}{a_n},\ \forall n\geq 1$$\\
+	Se sabe que $\{a_n\}$ es monótona creciente. Prueba que $\{a_n\}$ es convergente y calcule su límite.
 \end{preguntas}
 \end{document}
