Enunciado de 2019/2/MAT1620/2

--- a/2019/2/MAT1620/2/enunciado.tex
+++ b/2019/2/MAT1620/2/enunciado.tex
@@ -119,6 +119,8 @@
 \begin{tasks}(2)
 \task $a_n = \dfrac{3^n+7}{5^n-3}$
 \task $a_n = \dfrac{n^3-n}{7n^3+6}$
+\task $a_n = \dfrac{(-1)^n n}{n^3+4}$
+\task $a_n=\ln(n+1)-\ln(n)$
 \end{tasks}
 \item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
 \begin{tasks}(2)
