--- a/2019/2/MAT1620/2/solucion.tex
+++ b/2019/2/MAT1620/2/solucion.tex
@@ -119,6 +119,8 @@
 \begin{tasks}(2)
 \task $a_n = \dfrac{3^n+7}{5^n-3}$
 \task $a_n = \dfrac{n^3-n}{7n^3+6}$
+\task $a_n = \dfrac{(-1)^n n}{n^3+4}$
+\task $a_n=\ln(n+1)-\ln(n)$
 \end{tasks}
 \begin{solucion}
 
@@ -131,6 +133,8 @@
 			\\
 			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{n^3-n}{7n^3+6} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{3n^2-1}{21n^2}
 			\stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{6n}{42n} = \dfrac{1}{7}$$
+\item 
+\item 
 \end{enumerate}
 \end{solucion}
 \item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
