--- a/2019/2/MAT1620/2/solucion.tex
+++ b/2019/2/MAT1620/2/solucion.tex
@@ -163,8 +163,34 @@ $$\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n} = \lim\limits_{n \ra \infty} \
 \end{solucion}
 \item La sucesión $\{a_n\}$ se define con 
 		$$a_1=1\quad y\quad a_{n+1} = 3-\dfrac{1}{a_n},\ \forall n\geq 1$$\\
-	Se sabe que $\{a_n\}$ es monótona creciente. Prueba que $\{a_n\}$ es convergente y calcule su límite.
+Se sabe que $\{a_n\}$ es monótona creciente. Prueba que $\{a_n\}$ es convergente y calcule su límite.
 \begin{solucion}
+Para que una sucesión sea convergente, basta que esta sea monótona creciente y acotada, por lo que debemos demostrar que $\{a_n\}$ es acotada.\\
+
+Demostremos por inducción que $\{a_n\}$ esta acotada superiormente por 3. \\
+$$n = 1 \ra a_1 = 1 \leq 3$$
+Hipótesis de inducción:
+$$n = k \ra a_k \leq 3$$
+Tésis de inducción:
+$$n = k+1$$
+Por demostrar que $a_{n+1} \leq 3$
+$$\a_k \leq 3$$
+$$\dfrac{1}{a_k} \geq \dfrac{1}{3}$$
+$$-\dfrac{1}{a_k} \leq -\dfrac{1}{3}$$
+$$3-\dfrac{1}{a_k} \leq 3-\dfrac{1}{3}$$
+$$a_{k+1} \leq 3-\dfrac{1}{3}$$
+$$a_{k+1} \leq 3$$
+Luego, al ser monótona creciente y acotada, la sucesión es convergente.\\
+
+Para calcular el límite de esta, digamos que
+$$L = \lim\limits_{n \ra \infty} a_n$$
+Luego,
+$$L = 3 - \dfrac{1}{L}$$
+$$L^2 = 3L - 1$$
+$$L^2 - 3L + 1 = 0$$
+$$L = \dfrac{1\pm\ \sqrt[]{5}}{2}$$
+Pero $a_n > 0$, por lo que
+$$L = \dfrac{1 + \sqrt[]{5}}{2}$$
 
 \end{solucion}
 \end{preguntas}
